// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDocumentationRoutes > builds the documentation routes in the correct order 1`] = `
[
  {
    "isStagingOnly": false,
    "key": "dokumentation_hinweise",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/hinweise",
    "sitemap": true,
    "title": "Dokumentation: Hinweise",
  },
  {
    "isStagingOnly": false,
    "key": "dokumentation_regelungsvorhabenTitel",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/regelungsvorhaben-titel",
    "sitemap": true,
    "title": "Regelungsvorhaben Titel",
  },
  {
    "isStagingOnly": false,
    "key": "dokumentation_beteiligungsformate",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/beteiligungsformate",
    "sitemap": true,
    "title": "Beteiligungsformate",
  },
  [
    {
      "isStagingOnly": false,
      "key": "doc-1",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation/digitale-kommunikation",
      "principleId": "doc-1",
      "sitemap": false,
      "title": "Digitale Kommunikation sicherstellen",
    },
    {
      "isStagingOnly": false,
      "key": "doc-2",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation/wiederverwendung",
      "principleId": "doc-2",
      "sitemap": false,
      "title": "Wiederverwendung von Daten und Standards ermöglichen",
    },
  ],
  {
    "isStagingOnly": false,
    "key": "dokumentation_zusammenfassung",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/zusammenfassung",
    "sitemap": true,
    "title": "Dokumentation: Zusammenfassung",
  },
  {
    "isStagingOnly": false,
    "key": "dokumentation_absenden",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/absenden",
    "sitemap": true,
    "title": "Absenden",
  },
]
`;

exports[`buildDocumentationRoutes > returns only intro and finalize routes when no prinzips given 1`] = `
[
  {
    "isStagingOnly": false,
    "key": "dokumentation_hinweise",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/hinweise",
    "sitemap": true,
    "title": "Dokumentation: Hinweise",
  },
  {
    "isStagingOnly": false,
    "key": "dokumentation_regelungsvorhabenTitel",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/regelungsvorhaben-titel",
    "sitemap": true,
    "title": "Regelungsvorhaben Titel",
  },
  {
    "isStagingOnly": false,
    "key": "dokumentation_beteiligungsformate",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/beteiligungsformate",
    "sitemap": true,
    "title": "Beteiligungsformate",
  },
  [],
  {
    "isStagingOnly": false,
    "key": "dokumentation_zusammenfassung",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/zusammenfassung",
    "sitemap": true,
    "title": "Dokumentation: Zusammenfassung",
  },
  {
    "isStagingOnly": false,
    "key": "dokumentation_absenden",
    "navLabel": null,
    "navOrder": null,
    "parent": {
      "isStagingOnly": false,
      "key": "dokumentation",
      "navLabel": null,
      "navOrder": null,
      "parent": null,
      "path": "/dokumentation",
      "sitemap": true,
      "title": "Dokumentation",
    },
    "path": "/dokumentation/absenden",
    "sitemap": true,
    "title": "Absenden",
  },
]
`;
